# sickchill-modern

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  config.py  episodes.py  history.py  postprocess.py  providers.py  search.py  settings.py  shows.py  system.py
backend/app/core/: security.py
backend/app/db/: base.py  session.py
backend/app/downloaders/: __init__.py  base.py  sabnzbd.py
backend/app/indexers/: __init__.py  base.py  tvdb.py
backend/app/models/: __init__.py  episode.py  history.py  provider.py  setting.py  show.py  user.py
backend/app/postprocessing/: __init__.py  namer.py  processor.py
backend/app/providers/: base.py  example.py  newznab.py  quality.py  registry.py
backend/app/scheduler/: jobs.py  scheduler.py
backend/app/schemas/: auth.py  common.py  episode.py  show.py
backend/app/services/: search_service.py  settings_service.py  show_service.py
backend/scripts/: import_sickchill.py
backend/tests/: test_health.py  test_newznab.py  test_postprocessing.py  test_quality.py  test_sabnzbd.py  test_tvdb.py
docker/: Dockerfile
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  menu.ts  style.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AppLayout.vue  BottomNav.vue  MobileDrawer.vue  TopNav.vue
(+16 files in other folders)
